# FoundrFuse

./: .env  .gitignore  .gitkeep  README.md  backup.json  benefits-section-v1.html  db.sqlite3  main.py  manage.py  postgres.txt  pyproject.toml  questions.txt  requirements.txt
FoundrFuse/: asgi.py  settings.py  urls.py  wsgi.py
LAYOUT/: about.txt  accounts.txt  blog.txt  features.txt  founders.txt  home.txt  investor.txt  pricing.txt  registration.txt  subscription.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_profile_country_code_profile_investment_focus_and_more.py
core/: admin.py  context_processors.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_sitesettings_about_description_sitesettings_address_and_more.py  0003_testimonial.py  0004_featurefaq.py  0005_founderfaq_foundersuccessstory.py
core/templatetags/: custom_filters.py
static/css/: animations.css  base.css  discover.css  edit_profile.css  features.css  founders.css  graphics.css  home.css  investor_dashboard.css  investors.css  join_beta.css  pricing.css  register.css  style.css
static/js/: dashboard.js  founders.js  main.js  register.js
staticfiles/css/: style.css
subscription/: admin.py  apps.py  middleware.py  models.py  signals.py  tasks.py  urls.py  views.py  webhooks.py
subscription/migrations/: 0001_initial.py  0002_paymenthistory_payment_method.py
templates/: base.html  footer.html  navbar.html
templates/accounts/: demo.html  discover.html  edit_profile.html  login.html  (+6 more)
your_app/: views.py
(+17 files in other folders)
