[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-filter>=25.1",
    "django>=5.2.1",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openpyxl>=3.1.5",
    "pillow>=11.2.1",
    "psycopg2-binary>=2.9.10",
    "xlsxwriter>=3.2.3",
    "django-tables2>=2.7.5",
    "django-import-export>=4.3.7",
    "xhtml2pdf>=0.2.17",
]
